HEAD
	+ Added postmaster option and deprecated bounceReturnAddress
	option
	+ Fixed migration script and ulimited mail message size
	multiplication warning. The error in migration dont corrupted
	configuration but made new installations fail the last migration
	script.
	+ Updated localAttributes in MailUserLdap
1.3.14
	+ Added precondition in ObjectPolicy model
	+ Account home in dovecot set to its maildir, this is necesary for
	some SIEVE features like vacation autoreply
	+ Added autocreation of drafts and sent mail folders
	+ Fixed bug in UI: now we can set properly the number of
	expiration days for spam and deleted messages
	+ Added per domain catch-all accounts
	+ Logs fixes
	+ Added aliases to external accounts
	+ Added multiple aliases per group
	+ Improved queue management
	+ Added dovecot-antispam plugin integration
	+ Added email retrieval for external accounts
	+ Added more connections check to avoid spammers
	+ Add DefaultUser model to be used in users and groups default user
	  template. Admins can select if they wish to create an email account  automatically
	  by default when creating new users.
	+ Enable mail services by default
	+ Fix ids and checkRowExist in ExternalAccount.pm
	+ Fix method for modification of external accounts
	+ Reverted UI component name to be compatible with previous versions
1.3.13
	+ Fixed bug in UI: now we can set properly the maximum message size
1.3.12
	+ Add migration to rename mail table to mail_message
	+ Add breadcrumbs
1.3.11
	+ Fixed bug when retrieving LDAP instance in master/slave architecture
	+ Added log consolidation and report
1.3.10
	+ ESMTP service in port 465 fixed
	+ Deliver to local user fixed
	+ Using LDA protocol and LDAP for dovecot's userdb
	+ Added user mailbox quota
	+ Added autocreation of trash and spam folders
	+ Added flush of spam and trash folders
	+ Added sieve and managesieve support
1.3.7
	+ more resilent EBox::MailVdomain::setUserAccount, now we don't