@@ -1,6 +1,5 @@
 # Generated by eBox
 <%args>
-        $fqdn
         $ldapport
 
         $relay
@@ -73,9 +72,8 @@ biff = no
 
 append_dot_mydomain = no
 
-myhostname = <% $fqdn %>
-#myorigin = /etc/mailname
-#mydestination = $myorigin, $myhostname, localhost, localhost.$mydomain, localhost.localdomain
+
+myorigin = /etc/mailname
 alias_maps = hash:/etc/aliases
 
 alias_database = hash:/etc/aliases
@@ -160,7 +158,7 @@ broken_sasl_auth_clients = yes
 smtpd_tls_auth_only = yes
 smtpd_sasl_type = dovecot
 smtpd_sasl_path = private/auth
-smtpd_sasl_local_domain = <% $fqdn %>
+smtpd_sasl_local_domain =  $myhostname 
 % }
 
 % if ($filter) {
