@@ -6,6 +6,8 @@ HEAD
 	configuration but made new installations fail the last migration
 	script.
 	+ Updated localAttributes in MailUserLdap
+	+ Added LOGIN to authorization mechanisms
+	+ Using /etc/mailname in hostname and sasl_domain paramteres
 1.3.14
 	+ Added precondition in ObjectPolicy model
 	+ Account home in dovecot set to its maildir, this is necesary for
